name:           MPrD
version:        0.1.2
synopsis:       The Music Player reDeemon library
author:         David Kaloper <david@pako.st>
copyright:      2010 David Kaloper
stability:      alpha
category:       Network, Sound
cabal-version:  >= 1.2
build-type:     Simple

library
  exposed-modules:
    Network.MPrD
    Network.MPrD.Tags
    Network.MPrD.Monad
  other-modules:
    Network.MPrD.Misc
    Network.MPrD.Types
    Network.MPrD.Codec
    Network.MPrD.Commands
    Network.MPrD.Connection
  
  build-depends:
    base        >= 4,
    text        >= 0.7,
    bytestring  >= 0.9,
    containers  >= 0.2,
    network     >= 2.2,
    mtl         >= 1.1

  ghc-prof-options: -auto-all
  ghc-options: -Wall -O1

